# modbus

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/pdu/: mod.rs
src/pdu/bit_access/: mod.rs  read_coils.rs  read_dscr_in.rs  write_single_coil.rs
src/pdu/hex_access/: mod.rs  read_hld_reg.rs  read_in_reg.rs  write_multi_reg.rs  write_single_reg.rs
src/transport/: mod.rs
src/transport/rtu/: conn.rs  frame.rs
src/transport/tcp/: conn.rs  frame.rs  mod.rs
